--- a/Module1.ipynb
+++ b/Module1.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python385jvsc74a57bd0ef2904c27a51ff98685eed6f6fbf89a79855f8c8d9661ade4f9eaa9aaf909b19",
-   "display_name": "Python 3.8.5 64-bit (conda)"
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
@@ -159,7 +159,7 @@
     "\n",
     "\n",
     "# Saving FlightDF\n",
-    "flightDF.to_csv(os.path.join(basePath, \"flight-data\", \"FlightxData.csv\"), index=False) \n",
+    "flightDF.to_csv(os.path.join(basePath, \"flight-data\", \"FlightData.csv\"), index=False) \n",
     "\n",
     "flightDF.shape"
    ]
@@ -173,19 +173,19 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "   Unnamed: 0  Year  Quarter  Month  DayofMonth  FlightDate  OriginAirportID  \\\n",
-       "0           0  2016        1      1           1  2016-01-01            14747   \n",
-       "1           1  2016        1      1           2  2016-01-02            14747   \n",
-       "2           2  2016        1      1           3  2016-01-03            14747   \n",
-       "3           3  2016        1      1           4  2016-01-04            14747   \n",
-       "4           4  2016        1      1           5  2016-01-05            14747   \n",
+       "   Year  Quarter  Month  DayofMonth  FlightDate  OriginAirportID Origin  \\\n",
+       "0  2016        1      1           1  2016-01-01            14747    SEA   \n",
+       "1  2016        1      1           2  2016-01-02            14747    SEA   \n",
+       "2  2016        1      1           3  2016-01-03            14747    SEA   \n",
+       "3  2016        1      1           4  2016-01-04            14747    SEA   \n",
+       "4  2016        1      1           5  2016-01-05            14747    SEA   \n",
        "\n",
-       "  Origin  DestAirportID Dest  CRSDepTime  DepTime  DepDelayMinutes  DepDel15  \\\n",
-       "0    SEA          12478  JFK         745      741              0.0       0.0   \n",
-       "1    SEA          12478  JFK         745      737              0.0       0.0   \n",
-       "2    SEA          12478  JFK         745      743              0.0       0.0   \n",
-       "3    SEA          12478  JFK         745      737              0.0       0.0   \n",
-       "4    SEA          12478  JFK         710      708              0.0       0.0   \n",
+       "   DestAirportID Dest  CRSDepTime  DepTime  DepDelayMinutes  DepDel15  \\\n",
+       "0          12478  JFK         745      741              0.0       0.0   \n",
+       "1          12478  JFK         745      737              0.0       0.0   \n",
+       "2          12478  JFK         745      743              0.0       0.0   \n",
+       "3          12478  JFK         745      737              0.0       0.0   \n",
+       "4          12478  JFK         710      708              0.0       0.0   \n",
        "\n",
        "   CRSArrTime  ArrTime  ArrDelayMinutes  ArrDel15  DepHour  ArrHour  \n",
        "0        1602     1610              8.0       0.0      700     1600  \n",
@@ -194,7 +194,7 @@
        "3        1602     1551              0.0       0.0      700     1500  \n",
        "4        1527     1524              0.0       0.0      700     1500  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>Year</th>\n      <th>Quarter</th>\n      <th>Month</th>\n      <th>DayofMonth</th>\n      <th>FlightDate</th>\n      <th>OriginAirportID</th>\n      <th>Origin</th>\n      <th>DestAirportID</th>\n      <th>Dest</th>\n      <th>CRSDepTime</th>\n      <th>DepTime</th>\n      <th>DepDelayMinutes</th>\n      <th>DepDel15</th>\n      <th>CRSArrTime</th>\n      <th>ArrTime</th>\n      <th>ArrDelayMinutes</th>\n      <th>ArrDel15</th>\n      <th>DepHour</th>\n      <th>ArrHour</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>745</td>\n      <td>741</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1602</td>\n      <td>1610</td>\n      <td>8.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1600</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2016-01-02</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>745</td>\n      <td>737</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1602</td>\n      <td>1613</td>\n      <td>11.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1600</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2016-01-03</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>745</td>\n      <td>743</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1602</td>\n      <td>1547</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1500</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>2016-01-04</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>745</td>\n      <td>737</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1602</td>\n      <td>1551</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1500</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2016-01-05</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>710</td>\n      <td>708</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1527</td>\n      <td>1524</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1500</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Quarter</th>\n      <th>Month</th>\n      <th>DayofMonth</th>\n      <th>FlightDate</th>\n      <th>OriginAirportID</th>\n      <th>Origin</th>\n      <th>DestAirportID</th>\n      <th>Dest</th>\n      <th>CRSDepTime</th>\n      <th>DepTime</th>\n      <th>DepDelayMinutes</th>\n      <th>DepDel15</th>\n      <th>CRSArrTime</th>\n      <th>ArrTime</th>\n      <th>ArrDelayMinutes</th>\n      <th>ArrDel15</th>\n      <th>DepHour</th>\n      <th>ArrHour</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>745</td>\n      <td>741</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1602</td>\n      <td>1610</td>\n      <td>8.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1600</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2016-01-02</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>745</td>\n      <td>737</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1602</td>\n      <td>1613</td>\n      <td>11.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1600</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2016-01-03</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>745</td>\n      <td>743</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1602</td>\n      <td>1547</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1500</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>2016-01-04</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>745</td>\n      <td>737</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1602</td>\n      <td>1551</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1500</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2016-01-05</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>710</td>\n      <td>708</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1527</td>\n      <td>1524</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>700</td>\n      <td>1500</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "execution_count": 5
@@ -307,7 +307,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(1851436, 44)"
+       "(1851436, 43)"
       ]
      },
      "metadata": {},
@@ -338,19 +338,19 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "   Unnamed: 0  Year  Quarter  Month  DayofMonth  FlightDate  OriginAirportID  \\\n",
-       "0           0  2016        1      1           1  2016-01-01            14747   \n",
-       "1         538  2016        1      1           1  2016-01-01            13204   \n",
-       "2       25350  2016        1      1           1  2016-01-01            13204   \n",
-       "3       25873  2016        1      1           1  2016-01-01            12892   \n",
-       "4       28370  2016        1      1           1  2016-01-01            12892   \n",
+       "   Year  Quarter  Month  DayofMonth  FlightDate  OriginAirportID Origin  \\\n",
+       "0  2016        1      1           1  2016-01-01            14747    SEA   \n",
+       "1  2016        1      1           1  2016-01-01            13204    MCO   \n",
+       "2  2016        1      1           1  2016-01-01            13204    MCO   \n",
+       "3  2016        1      1           1  2016-01-01            12892    LAX   \n",
+       "4  2016        1      1           1  2016-01-01            12892    LAX   \n",
        "\n",
-       "  Origin  DestAirportID Dest  ...  WeatherCode_Dest  precipMM_Dest  \\\n",
-       "0    SEA          12478  JFK  ...               113            0.0   \n",
-       "1    MCO          12478  JFK  ...               113            0.0   \n",
-       "2    MCO          12478  JFK  ...               113            0.0   \n",
-       "3    LAX          12478  JFK  ...               113            0.0   \n",
-       "4    LAX          12478  JFK  ...               113            0.0   \n",
+       "   DestAirportID Dest  CRSDepTime  ...  WeatherCode_Dest  precipMM_Dest  \\\n",
+       "0          12478  JFK         745  ...               113            0.0   \n",
+       "1          12478  JFK        1330  ...               113            0.0   \n",
+       "2          12478  JFK        1445  ...               113            0.0   \n",
+       "3          12478  JFK         855  ...               113            0.0   \n",
+       "4          12478  JFK         840  ...               113            0.0   \n",
        "\n",
        "   Visibility_Dest  Pressure_Dest  Cloudcover_Dest  DewPointF_Dest  \\\n",
        "0               10           1016                0              33   \n",
@@ -366,9 +366,9 @@
        "3                 24          42               33             74  \n",
        "4                 24          42               33             74  \n",
        "\n",
-       "[5 rows x 44 columns]"
+       "[5 rows x 43 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>Year</th>\n      <th>Quarter</th>\n      <th>Month</th>\n      <th>DayofMonth</th>\n      <th>FlightDate</th>\n      <th>OriginAirportID</th>\n      <th>Origin</th>\n      <th>DestAirportID</th>\n      <th>Dest</th>\n      <th>...</th>\n      <th>WeatherCode_Dest</th>\n      <th>precipMM_Dest</th>\n      <th>Visibility_Dest</th>\n      <th>Pressure_Dest</th>\n      <th>Cloudcover_Dest</th>\n      <th>DewPointF_Dest</th>\n      <th>WindGustKmph_Dest</th>\n      <th>tempF_Dest</th>\n      <th>WindChillF_Dest</th>\n      <th>Humidity_Dest</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>538</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>13204</td>\n      <td>MCO</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>25350</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>13204</td>\n      <td>MCO</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>25873</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>12892</td>\n      <td>LAX</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>28370</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>12892</td>\n      <td>LAX</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 44 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Quarter</th>\n      <th>Month</th>\n      <th>DayofMonth</th>\n      <th>FlightDate</th>\n      <th>OriginAirportID</th>\n      <th>Origin</th>\n      <th>DestAirportID</th>\n      <th>Dest</th>\n      <th>CRSDepTime</th>\n      <th>...</th>\n      <th>WeatherCode_Dest</th>\n      <th>precipMM_Dest</th>\n      <th>Visibility_Dest</th>\n      <th>Pressure_Dest</th>\n      <th>Cloudcover_Dest</th>\n      <th>DewPointF_Dest</th>\n      <th>WindGustKmph_Dest</th>\n      <th>tempF_Dest</th>\n      <th>WindChillF_Dest</th>\n      <th>Humidity_Dest</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>14747</td>\n      <td>SEA</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>745</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>13204</td>\n      <td>MCO</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>1330</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>13204</td>\n      <td>MCO</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>1445</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>12892</td>\n      <td>LAX</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>855</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2016-01-01</td>\n      <td>12892</td>\n      <td>LAX</td>\n      <td>12478</td>\n      <td>JFK</td>\n      <td>840</td>\n      <td>...</td>\n      <td>113</td>\n      <td>0.0</td>\n      <td>10</td>\n      <td>1016</td>\n      <td>0</td>\n      <td>33</td>\n      <td>24</td>\n      <td>42</td>\n      <td>33</td>\n      <td>74</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 43 columns</p>\n</div>"
      },
      "metadata": {},
      "execution_count": 9
